--- a/src/pages/docs/tour/1st-thailand-tour:sukhothai-unexpected-ride.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:sukhothai-unexpected-ride.mdx
@@ -17,7 +17,7 @@ There's a square right by the center.
 And a aunt's snack waggon I found.
 I bought some to feed myself.
 "Where is this resort?, I asked the aunt.
-"Just go ahead from this road, then turn right.", a guy with thai style uniform answered.
+"Just go ahead from this road, then turn right.", a man with thai style uniform answered.
 I thought he's a local policeman.
 
 "Thank you." I said. Abruptly, "I drive you there" he stopped me and he insist again.
