--- a/src/pages/docs/tour/1st-thailand-tour:sukhothai-unexpected-ride.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:sukhothai-unexpected-ride.mdx
@@ -20,7 +20,8 @@ I bought some to feed myself.
 "Just go ahead from this road, then turn right.", a man with thai style uniform answered.
 I thought he's a local policeman.
 
-"Thank you." I said. Abruptly, "I drive you there" he stopped me and he insist again.
+"Thank you." I said. Abruptly, "I drive you there" he stopped me.
+I respectfully declined, but he insist.
 That is a unexpected ride from foreigner.
 I got on the truck with a tense atmosphere,
 and I was thinking of what to do if he asked me a high ride price or something on the end of trip.
