--- a/src/pages/docs/tour/1st-thailand-tour:sukhothai-unexpected-ride.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:sukhothai-unexpected-ride.mdx
@@ -1,4 +1,5 @@
 import Map from '@/components/map';
+import Img from '@/components/img';
 
 ## Unexpected Ride
 
@@ -33,4 +34,6 @@ The truck drive straightly and turn right at the first intersection. Not more th
 
 What a nice guy, isn't is? And he's not the only nice guy I met.
 
-<Map driving={["17.0295994,99.7038415,Tourist Information Center","17.031670,99.706329,Baan Rim Klong Resort"]} />
+<Map driving={["17.030496,99.702936,Tourist Information Center","17.032004,99.702915,_","17.031670,99.706329,Baan Rim Klong Resort"]} />
+
+<Img src={'tourist-information-center.png'} />
