--- a/src/pages/docs/tour/1st-thailand-tour:sukhothai-riding-in-dark.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:sukhothai-riding-in-dark.mdx
@@ -1,6 +1,6 @@
 import Map from '@/components/map';
 
-## Riding in dark
+## Riding in Dark
 
 After meal, the day just black out. And I can't recognize the way back in the black.
 The sense of direction told me I should ride to north.
