--- a/src/pages/docs/tour/1st-thailand-tour:phuket-catch-the-wind.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:phuket-catch-the-wind.mdx
@@ -2,15 +2,17 @@ import Map from '@/components/map';
 
 ## Catch the Wind
 
-It's the last day I stay in Phuket, it heavy rained in the morning.
+It's the last day I stay in Phuket, it heavy rained in the morning,
+and the wind below to East which mean planes will not landing at beach side.
 Even though, I plan to walking to airport, for photos of plane.
 
-I hidden under my umbrella, elude the strong wind, cross the inflow of flood.
+I hide under my umbrella, elude the strong wind, cross the inflow of flood.
 I reached the beach at the end of runway.
 
-Rain stopped.
-A A380 cross my head, too late to get my camera.
-I wait there and watch my plane radar app.
+Rain stopped, wind direction changed!
+
+A A380 take off over my head, too late to get my camera.
+I watched my plane radar app and waiting for landing.
 I got some plane photos, include a beautiful B747.
 And the sky just went to warming and shinning.
 
