--- a/src/pages/docs/english/pronunciation.mdx
+++ b/src/pages/docs/english/pronunciation.mdx
@@ -1,19 +1,21 @@
+import Speak from '@/components/speak';
+
 *IPA88*
 
 ## /iː/
 
-- fleece /fliːs/
-- sea /siː/
-- machine /məˈʃiːn/
+- <Speak>fleece</Speak> /fliːs/
+- <Speak>sea</Speak> /siː/
+- <Speak>machine</Speak> /məˈʃiːn/
 
 ## /iː/ and /ɪ/
 
-- litre /ˈliːtə/, litter /ˈlɪtə/
-- cheap /tʃiːp/, chip /tʃɪp/
-- feet /fiːt/, fit /fɪt/
-- he's /hiːz/, his /hɪz/
-- peach /piːtʃ/, pitch /pɪtʃ/
-- sheep /ʃiːp/, ship /ʃɪp/
+- <Speak>litre</Speak> /ˈliːtə/, <Speak>litter</Speak> /ˈlɪtə/
+- <Speak>cheap</Speak> /tʃiːp/, <Speak>chip</Speak> /tʃɪp/
+- <Speak>feet</Speak> /fiːt/, <Speak>fit</Speak> /fɪt/
+- <Speak>he's</Speak> /hiːz/, <Speak>his</Speak> /hɪz/
+- <Speak>peach</Speak> /piːtʃ/, <Speak>pitch</Speak> /pɪtʃ/
+- <Speak>sheep</Speak> /ʃiːp/, <Speak>ship</Speak> /ʃɪp/
 
 ## /uː/
 
