--- a/src/pages/docs/tour/1st-thailand-tour:sukhothai-riding-in-dark.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:sukhothai-riding-in-dark.mdx
@@ -12,7 +12,7 @@ Tons of flies hit my face, and I tasted some.
 After crossing, I feel a river beside me, like a square river.
 The Wat Phrapai Luang I am confident.
 
-I met a shining motorbike opposite riding from me, I believe they can not see me.
+I met motorbike with a beam headlight riding opposite me that I believe which win't see me.
 So I have to stop my bike beside the road.
 
 At the cross, I saw fireflies, two or three. Not light in the dark, but beautiful.
