--- a/src/pages/docs/english/pronunciation.mdx
+++ b/src/pages/docs/english/pronunciation.mdx
@@ -1,21 +1,23 @@
-import Speak from '@/components/speak';
+import AutoSpeak from '@/components/auto-speak';
 
 *IPA88*
 
+<AutoSpeak>
+
 ## /iː/
 
-- <Speak>fleece</Speak> /fliːs/
-- <Speak>sea</Speak> /siː/
-- <Speak>machine</Speak> /məˈʃiːn/
+- fleece /fliːs/
+- sea /siː/
+- machine /məˈʃiːn/
 
 ## /iː/ and /ɪ/
 
-- <Speak>litre</Speak> /ˈliːtə/, <Speak>litter</Speak> /ˈlɪtə/
-- <Speak>cheap</Speak> /tʃiːp/, <Speak>chip</Speak> /tʃɪp/
-- <Speak>feet</Speak> /fiːt/, <Speak>fit</Speak> /fɪt/
-- <Speak>he's</Speak> /hiːz/, <Speak>his</Speak> /hɪz/
-- <Speak>peach</Speak> /piːtʃ/, <Speak>pitch</Speak> /pɪtʃ/
-- <Speak>sheep</Speak> /ʃiːp/, <Speak>ship</Speak> /ʃɪp/
+- litre /ˈliːtə/, litter /ˈlɪtə/
+- cheap /tʃiːp/, chip /tʃɪp/
+- feet /fiːt/, fit /fɪt/
+- he's /hiːz/, his /hɪz/
+- peach /piːtʃ/, pitch /pɪtʃ/
+- sheep /ʃiːp/, ship /ʃɪp/
 
 ## /uː/
 
@@ -203,3 +205,5 @@ import Speak from '@/components/speak';
 - healthy /ˈhelθi/
 - birth /bɜːθ/
 - path /pɑːθ/
+
+</AutoSpeak>
