--- a/src/pages/docs/tour/2nd-malaysia:mabul-scuba-paradise.mdx
+++ b/src/pages/docs/tour/2nd-malaysia:mabul-scuba-paradise.mdx
@@ -8,4 +8,4 @@ The artificial reef is a collaboration work of resorts within and nearby Mabul.
 
 It named "Paradise 2".
 
-<Map aerial zoom={15} points={["4.250431,118.630882"]} center={"4.250516,118.631612"} />
+<Map aerial zoom={15} points={["4.250431,118.630882"]} />
