--- a/src/pages/docs/tour/thailand-tour:similan-great-escape.mdx
+++ b/src/pages/docs/tour/thailand-tour:similan-great-escape.mdx
@@ -3,6 +3,7 @@ import Map from '@/components/map';
 ## The Great Escape
 
 <Map driving={["9.1438932,99.3283169,Surat Thani Transport Station","8.9006588,98.5198817,Khao Sok Bus Stop","8.6668406,98.2527142,Khao Lak"]} />
+<Map points={["8.6558474,97.6437167"]} center={"8.584864,97.638397"} zoom={10} />
 
 To catch up with Full Moon Party, I have to travel 541km distance in 18 hours.
 
