--- a/src/pages/docs/tour/1st-thailand-tour:phuket-catch-the-wind.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:phuket-catch-the-wind.mdx
@@ -18,4 +18,4 @@ And the sky just went to warming and shinning.
 
 I did it by perseverance.
 
-<Map walking={["8.092336,98.301914,Resort","8.102200,98.300412,."]} points={["8.111834,98.302161"]} />
+<Map walking={["8.092336,98.301914,Resort","8.092496,98.299101,.","8.101805,98.299957,."]} points={["8.111834,98.302161"]} />
