--- a/src/pages/docs/english/pronunciation.mdx
+++ b/src/pages/docs/english/pronunciation.mdx
@@ -206,4 +206,11 @@ import AutoSpeak from '@/components/auto-speak';
 - birth /bɜːθ/
 - path /pɑːθ/
 
+## /s/
+
+- soon /suːn/
+- mr /mɪstə/
+- hiss /hɪs/
+- cease /siːs/
+
 </AutoSpeak>
