--- a/src/pages/docs/video/ffmpeg.mdx
+++ b/src/pages/docs/video/ffmpeg.mdx
@@ -1,9 +1,9 @@
 ```
-ffmpeg -i test.h264 -vcodec copy -f mp4 test.mp4
+ffmpeg -i test.h264 -vcodec copy test.h264
 ```
 
 ```
-ffmpeg -i test.h264 -vcodec h264 -preset slower test.mp4
+ffmpeg -i test.h264 -vcodec h264 -preset placebo test.mp4
 ```
 
 `ultrafast`, `superfast`, `veryfast`,`faster`, `fast`, `medium`, `slow`, `slower`, `veryslow`, `placebo`
