--- a/src/pages/docs/movie/lines.mdx
+++ b/src/pages/docs/movie/lines.mdx
@@ -17,3 +17,9 @@ I watched C-beams glitter in the dark near the Tannhauser Gate.
 All those moments will be lost in time.
 Like tears in rain.
 Time to die.
+
+Because he's the hero Gotham deserves, but not the one it needs right now.
+So we'll hunt him...Because he can take it.
+Because he's not our hero.
+He's a silent guardian...a watchful protector.
+A DARK KNIGHT.
