--- a/src/pages/docs/t7/T1-Bangkok1.mdx
+++ b/src/pages/docs/t7/T1-Bangkok1.mdx
@@ -17,3 +17,7 @@ import thebeach2000 from './The.Beach.2000.png'
 *- The Beach, 2000*   
 
 <img src={thebeach2000} />
+
+## BAIYOKE SUITE
+
+## ROAD TO NORTH
