--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdX
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdX
@@ -1,6 +1,7 @@
 import thebeach2000 from './The.Beach.2000.png'
 
 ## BANGKOK 1
+*Otc 8th, 2013, 4 nights*
 
 *Bangkok, good-time city. Gateway to Southeast Asia. Where dollars and Duetsmarks get  turned into counterfeit watches and genuine scars.*
 
