--- a/src/pages/docs/f2e/css/BFC.mdx
+++ b/src/pages/docs/f2e/css/BFC.mdx
@@ -2,7 +2,7 @@
 
 `Block Formatting Context`
 
-* `Floats`, except `float: none`
-* position `absolute`/`fixed`
-* display `inline-block`, `table-cell`, `table-caption`
-* overflow `hidden`, `auto`, `scroll`
+- `Floats`, except `float: none`
+- position `absolute`/`fixed`
+- display `inline-block`, `table-cell`, `table-caption`
+- overflow `hidden`, `auto`, `scroll`
