--- a/src/pages/docs/f2e/css/Box-model.mdx
+++ b/src/pages/docs/f2e/css/Box-model.mdx
@@ -7,10 +7,10 @@ By default, width and height assign to element is applied only to the `content` 
 
 ### box-sizing
 
-* `content-box`, default CSS box-sizing.
+- `content-box`, default CSS box-sizing.
 
 the width you set, will applied to `content box`, and the width of any `border` or `padding` will be added to final `width`
 
-* `border-box`,
+- `border-box`,
 
 the width you set, will include any `border` or `padding` you added.
