--- a/src/pages/docs/f2e/http/Headers-and-Caching.mdx
+++ b/src/pages/docs/f2e/http/Headers-and-Caching.mdx
@@ -4,7 +4,7 @@
 
 `HTTP/1.0`
 
-*Invalid dates, like 0 mean already expired*
+_Invalid dates, like 0 mean already expired_
 
 ```
 Expires: Wed, 21 Oct 2015 07:28:00 GMT
@@ -32,7 +32,7 @@ contains date and time which server believes resource was last modified.
 
 ### HTTP/2
 
-* Longer-lived connection
-* Request and response multiplexing within a shared connection
-* HPACK - Header Compression
-* Server push resources
+- Longer-lived connection
+- Request and response multiplexing within a shared connection
+- HPACK - Header Compression
+- Server push resources
