--- a/src/pages/docs/f2e/javascript/Array.mdx
+++ b/src/pages/docs/f2e/javascript/Array.mdx
@@ -2,7 +2,7 @@
 
 ### Array.from()
 
-*not support IE*
+_not support IE_
 
 create a new, `shallow-copied` Array instance from an array-like or iterable object.
 
@@ -15,6 +15,7 @@ Array.from('foo')
 ```
 
 ```JavaScript
+
 ```
 
 ### prototype.pop()
