--- a/src/pages/docs/f2e/javascript/BigInt.mdx
+++ b/src/pages/docs/f2e/javascript/BigInt.mdx
@@ -1,6 +1,6 @@
 ## BigInt
 
-*ECMAScript `stage 3`, not support under IE/EDGE*
+_ECMAScript `stage 3`, not support under IE/EDGE_
 
 represent whole numbers larger than 253 - 1
 
@@ -8,10 +8,10 @@ represent whole numbers larger than 253 - 1
 BigInt(value);
 ```
 
-*BigInt() is not used with the new operator.*
+_BigInt() is not used with the new operator._
 
 ```js
-9999999999999999 - 1 === 9999999999999998 // false, 10000000000000000
-9999999999999999n - 1n === 9999999999999998n // true
-BigInt(9999999999999999) - BigInt(1) === BigInt(9999999999999998) // true
+9999999999999999 - 1 === 9999999999999998; // false, 10000000000000000
+9999999999999999n - 1n === 9999999999999998n; // true
+BigInt(9999999999999999) - BigInt(1) === BigInt(9999999999999998); // true
 ```
