--- a/src/pages/docs/f2e/javascript/Event.mdx
+++ b/src/pages/docs/f2e/javascript/Event.mdx
@@ -2,7 +2,7 @@
 
 `capturing` and `bubbling`
 
-*IE only support event `budding`*
+_IE only support event `budding`_
 
 first `captured` until reaches the target element and then `buddles` up again
 
