--- a/src/pages/docs/f2e/javascript/require&import.mdx
+++ b/src/pages/docs/f2e/javascript/require&import.mdx
@@ -29,8 +29,8 @@ import _test, { test } from './test'
 
 ### different
 
-* CommonJs output `a copy of value`
-* ES Moudle output `reference` of value
+- CommonJs output `a copy of value`
+- ES Moudle output `reference` of value
 
-* CommonJs Load at running
-* ES Module output at compile
+- CommonJs Load at running
+- ES Module output at compile
