--- a/src/pages/docs/f2e/vuejs/data-function.mdx
+++ b/src/pages/docs/f2e/vuejs/data-function.mdx
@@ -1,6 +1,6 @@
 ## Data()
 
-*to avoid closure share between components*
+_to avoid closure share between components_
 
 `Data()` return `an new object` within the function, so every time it called, `a fresh object is returned`.
 This means each component instance is self-contained as it should be and will contain its own internal state.
@@ -20,7 +20,7 @@ export default {
 }
 ```
 
-*every time this component init:*
+_every time this component init:_
 
 ```
 // result
