--- a/src/pages/docs/f2e/vuejs/v-if&v-for.mdx
+++ b/src/pages/docs/f2e/vuejs/v-if&v-for.mdx
@@ -3,7 +3,7 @@
 when they exist on same node, `v-for` has a higher priority than `v-if`.
 That means `v-if` can be useful when you want to render nodes for only `some` items.
 
-*Instead, your intent is to skip execution of the loop,* you can place `v-if` on a wrapper or `<template>`.
+_Instead, your intent is to skip execution of the loop,_ you can place `v-if` on a wrapper or `<template>`.
 
 ### key
 
