--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdX
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdX
@@ -1,3 +1,4 @@
+import Cryptor from '@/components/cryptor';
 import thebeach2000 from './The.Beach.2000.png'
 
 ## BANGKOK 1
@@ -8,10 +9,10 @@ import thebeach2000 from './The.Beach.2000.png'
 *"You need somewhere to stay?"*
 
 *"I'll be Ok, thanks."*
-        
+
 *"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl fucking no problem..."*
 
-...
+<Cryptor>0830f7</Cryptor>
 
 *I was traveling alone. Being alone allows me more opportunity to absorb your experience on your person level.*
 
