--- a/src/pages/docs/t7/T1-Bangkok1.mdx
+++ b/src/pages/docs/t7/T1-Bangkok1.mdx
@@ -1,19 +1,19 @@
-import thebeach2000 from './The.Beach.2000.png'
+import thebeach2000 from './The.Beach.2000.png';
 
 ## BANGKOK 1
 
-*Bangkok, good-time city. Gateway to Southeast Asia. Where dollars and Duetsmarks get  turned into counterfeit watches and genuine scars.*
+_Bangkok, good-time city. Gateway to Southeast Asia. Where dollars and Duetsmarks get turned into counterfeit watches and genuine scars._
 
-*"You need somewhere to stay?"*
+_"You need somewhere to stay?"_
 
-*"I'll be Ok, thanks."*
-        
-*"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl fucking no problem..."*
+_"I'll be Ok, thanks."_
+
+_"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl fucking no problem..."_
 
 ...
 
-*I was traveling alone. Being alone allows me more opportunity to absorb your experience on your person level.*
+_I was traveling alone. Being alone allows me more opportunity to absorb your experience on your person level._
 
-*- The Beach, 2000*   
+_- The Beach, 2000_
 
 <img src={thebeach2000} />
