--- a/src/pages/docs/tour/1st-thailand-tour:phuket-catch-the-wind.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:phuket-catch-the-wind.mdx
@@ -14,7 +14,10 @@ Rain stopped, wind direction changed! When I reached the end of the road.
 I leave the road and step on sand, heading airport along the beach.
 And a flood stream stopped me, my camera will die if I fall into it.
 
-<Map walking={["8.092336,98.301914,Resort","8.092496,98.299101,.","8.101805,98.299957,."]} points={["8.111834,98.302161"]} />
+<Map
+  walking={['8.092336,98.301914,Resort', '8.092496,98.299101,.', '8.101805,98.299957,.']}
+  points={['8.111834,98.302161']}
+/>
 
 Finally, I am at the end of runway.
 
@@ -26,4 +29,3 @@ And the sky just went to warming and shinning.
 <img src={B737} />
 
 I did it by perseverance.
-
