--- a/src/pages/docs/tour/1st-thailand-tour:sukhothai-riding-in-dark.mdx
+++ b/src/pages/docs/tour/1st-thailand-tour:sukhothai-riding-in-dark.mdx
@@ -17,6 +17,12 @@ So I have to stop my bike beside the road.
 
 At the cross, I saw fireflies, two or three. Not light in the dark, but beautiful.
 
-<Map walking={["17.020809,99.693417,Store","17.031913,99.702393,Fireflies","17.031670,99.706329,Baan Rim Klong Resort"]} />
+<Map
+  walking={[
+    '17.020809,99.693417,Store',
+    '17.031913,99.702393,Fireflies',
+    '17.031670,99.706329,Baan Rim Klong Resort',
+  ]}
+/>
 
 2013-10-11
