--- a/src/pages/docs/tour/emei--20℃.mdx
+++ b/src/pages/docs/tour/emei--20℃.mdx
@@ -17,4 +17,4 @@ The wind is piercing and temperature is under -20.
 
 It's pity to get a shaky photo, it direct impact "The Check List" I used then.
 
-<Map zoom={16} points={["29.520246,103.337843"]} center={"29.521189,103.337870"} />
+<Map zoom={16} points={['29.520246,103.337843']} center={'29.521189,103.337870'} />
