--- a/src/pages/docs/tour/thailand-tour:similan-deflate.mdx
+++ b/src/pages/docs/tour/thailand-tour:similan-deflate.mdx
@@ -19,4 +19,4 @@ A guy on boat shout to us, and we found out boat is toward us.
 We've been picked up to the deck, and Meng and Sergio is there.
 The girl will be transport to her boat, and we decide to jump again.
 
-<Map points={["9.055560,97.815189"]} center={"9.060280,97.812875"} />
+<Map points={['9.055560,97.815189']} center={'9.060280,97.812875'} />
