--- a/src/pages/docs/tour/thailand-tour:similan-great-escape.mdx
+++ b/src/pages/docs/tour/thailand-tour:similan-great-escape.mdx
@@ -31,4 +31,14 @@ Donsak Pier to Koh Phangan by Lomprayah's speed boat.
 
 Mini van from Thong Sala Pier to Rin Nai Beach.
 
-<Map driving={["8.644791,98.251189,Khao Lak Scuba Adventures","7.917718,98.395462,Phuket Bus Terminal 2","8.102171,98.907734,Krabi","8.077127,98.904208,Lomprayah","9.318253,99.736982,Donsak","9.709127,99.984432,Thong Sala","9.671759,100.067371,Rin Nai"]} />
+<Map
+  driving={[
+    '8.644791,98.251189,Khao Lak Scuba Adventures',
+    '7.917718,98.395462,Phuket Bus Terminal 2',
+    '8.102171,98.907734,Krabi',
+    '8.077127,98.904208,Lomprayah',
+    '9.318253,99.736982,Donsak',
+    '9.709127,99.984432,Thong Sala',
+    '9.671759,100.067371,Rin Nai',
+  ]}
+/>
