--- a/src/pages/docs/typescript/Public,-private,-and-protected-modifiers.mdx
+++ b/src/pages/docs/typescript/Public,-private,-and-protected-modifiers.mdx
@@ -1,14 +1,17 @@
 ## Public, private, and protected modifiers
 
-*[typescript-handbook](http://www.typescriptlang.org/docs/handbook/classes.html#public-private-and-protected-modifiers)*
+_[typescript-handbook](http://www.typescriptlang.org/docs/handbook/classes.html#public-private-and-protected-modifiers)_
 
 ### Public
+
 by default
 
 ### Private
+
 `private`, cannot be accessed from outside of its containing class.
 
 ### Protected
+
 `protected`, can also be accessed within deriving classes.
 
 [sandbox](https://codesandbox.io/s/typescript-9eywy)
@@ -33,15 +36,19 @@ class MyComponent extends Component {
 ```
 
 ### Readonly
+
 `readonly` properties must be initialized at their declaration or in the constructor.
 
 ### Get/Set
+
 `getters`/`setters` as a way of intercepting accesses to a member of an object.
 
 ### Static
+
 `static` on the origin, as it’s a general value for all grids. Each instance accesses this value through prepending the name of the class.
 
 ### Abstract
+
 `abstract` keyword is used to define abstract classes as well as abstract methods within an abstract class.
 
 [sandbox](https://codesandbox.io/s/typescript-1kpzw)
@@ -52,7 +59,7 @@ abstract class Component {
   protected constructor(props: any) {
     this.props = props;
   }
-  
+
   protected abstract render(): void;
 }
 
