--- a/src/pages/docs/video/composition.mdx
+++ b/src/pages/docs/video/composition.mdx
@@ -1,8 +1,10 @@
 ### Band night
----
-*device*: GoPro hero 3 black
 
-*mode*: 720p wide
+---
+
+_device_: GoPro hero 3 black
+
+_mode_: 720p wide
 
 ![](composition-bandnight.jpg)
 
@@ -10,9 +12,9 @@
 
 ### Songkran FPV
 
-*device*: GoPro hero 4 silver
+_device_: GoPro hero 4 silver
 
-*mode*: 720p wide
+_mode_: 720p wide
 
 ![](composition-songkran.jpg)
 
