--- a/src/pages/docs/f2e/javascript/Closure.mdx
+++ b/src/pages/docs/f2e/javascript/Closure.mdx
@@ -4,7 +4,7 @@ Variables created `without` `var`, are always `global`, even created inside a fu
 
 ### Global/Local Variables
 
-* Global variables live as long as application (window/web page) lives.
-* Local variables have short lives, created when function is invoked, and deleted when function is finished.
+- Global variables live as long as application (window/web page) lives.
+- Local variables have short lives, created when function is invoked, and deleted when function is finished.
 
 closure, makes possible for a function to have `private` varibales.
