--- a/src/pages/docs/f2e/nodejs/npm.mdx
+++ b/src/pages/docs/f2e/nodejs/npm.mdx
@@ -6,22 +6,22 @@
 
 #### custom arguments
 
-*special option `--` is used by `getopt`, npm will pass all arguments after `--` directly to script.
-the arguments will only be passed to the script specified after `npm run` and not to any `pre` or `post` script.*
+_special option `--` is used by `getopt`, npm will pass all arguments after `--` directly to script.
+the arguments will only be passed to the script specified after `npm run` and not to any `pre` or `post` script._
 
 #### .bin
 
-*the shell's pre-existing `PATH`, `npm run` add `node_modules/.bin` to the `PATH` provided to scripts. Any binaries provided by locally-installed dependencies can be used without `node_modules/.bin` prefix.*
+_the shell's pre-existing `PATH`, `npm run` add `node_modules/.bin` to the `PATH` provided to scripts. Any binaries provided by locally-installed dependencies can be used without `node_modules/.bin` prefix._
 
 #### & &&
 
 `"dev": "node test.js & webpack"`
 
-*run async*
+_run async_
 
 `"dev": "node test.js && webpack"`
 
-*run sync*
+_run sync_
 
 #### pre & post
 
@@ -31,7 +31,7 @@ the arguments will only be passed to the script specified after `npm run` and no
 "postdev": "node 3.js"
 ```
 
-*equal to `npm run predev && npm run dev && npm run postdev`*
+_equal to `npm run predev && npm run dev && npm run postdev`_
 
 #### lifecycle event
 
