--- a/src/pages/docs/f2e/webpack/Plugins.mdx
+++ b/src/pages/docs/f2e/webpack/Plugins.mdx
@@ -65,7 +65,7 @@ new webpack.DefinePlugin({
 });
 ```
 
-*Variables coming from process.env are always `strings`.*
+_Variables coming from process.env are always `strings`._
 
 ### IgnorePlugin
 
@@ -77,7 +77,7 @@ new webpack.IgnorePlugin(requestRegExp, [contextRegExp]);
 new webpack.IgnorePlugin(/^\.\/locale$/, /moment$/);
 ```
 
-*...which means "any require statement matching './locale' from any directories ending with 'moment' will be ignored.*
+_...which means "any require statement matching './locale' from any directories ending with 'moment' will be ignored._
 
 ### ProvidePlugin
 
