--- a/src/pages/docs/tour/malaysia-tour:Mount Kinabalu.mdx
+++ b/src/pages/docs/tour/malaysia-tour:Mount Kinabalu.mdx
@@ -1,14 +1,17 @@
 import Map from '@/components/map';
 
-<Map driving={[
-  "5.9436606,116.0487216,KKIA Terminal 2",
-  "5.9809019,116.0763801,Airport Bus Station",
-  "6.0076652,116.5425745,Mount Kinabalu National Park",
-  "6.0113287,116.5388984,Hill Lodge",
-]} />
-
-<Map walking={[
-  "6.0291003,116.5462398,Timpohon Gate",
-  "6.0589064,116.5651771,Laban Rata Resthouse",
-  "6.0752333,116.5584096,Gunung Kinabalu",
-]} />
+<Map
+  driving={[
+    '5.9436606,116.0487216,KKIA Terminal 2',
+    '5.9809019,116.0763801,Airport Bus Station',
+    '6.0076652,116.5425745,Mount Kinabalu National Park',
+    '6.0113287,116.5388984,Hill Lodge',
+  ]}
+/>
+<Map
+  walking={[
+    '6.0291003,116.5462398,Timpohon Gate',
+    '6.0589064,116.5651771,Laban Rata Resthouse',
+    '6.0752333,116.5584096,Gunung Kinabalu',
+  ]}
+/>
