--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdx
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdx
@@ -1,8 +1,9 @@
 import Cryptor from '@/components/cryptor';
+import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from './The.Beach.2000.png'
 
 ## BANGKOK 1
-*Otc 8th, 2013, 4 nights*
+<HotelNights date={'2013-10-8'} nights={4} />
 
 *Bangkok, good-time city. Gateway to Southeast Asia. Where dollars and Duetsmarks get  turned into counterfeit watches and genuine scars.*
 
