--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdx
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdx
@@ -2,7 +2,7 @@ import Cryptor from '@/components/cryptor';
 import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from './The.Beach.2000.png';
 
-## BANGKOK 1
+## TOUR 1 BANGKOK 1
 
 <HotelNights date={'2013-10-8'} nights={4} />
 
