--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdx
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdx
@@ -15,7 +15,7 @@ _"I'll be Ok, thanks."_
 _"What do you want? Sell passport? Tickets? You want silk? I'll take you to the best silk place? Diamonds? Come with me, get presents for girlfriend. Maybe no girlfriend. You want a girl, no problem. Good time. Boy girl <Cryptor>1d20ecdabeb25d</Cryptor> no problem..."_
 
 <p>
-  <Cryptor>0830f7</Cryptor>
+  <Cryptor>0f3aebde</Cryptor>
 </p>
 
 _I was traveling alone. Being alone allows me more opportunity to absorb your experience on your person level._
