--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdx
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdx
@@ -2,7 +2,8 @@ import Cryptor from '@/components/cryptor';
 import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from './The.Beach.2000.png';
 
-## TOUR 1 BANGKOK 1
+# TOUR 1 SOLITARY
+## BANGKOK 1
 
 <HotelNights date={'2013-10-8'} nights={4} />
 
@@ -22,8 +23,8 @@ _I was traveling alone. Being alone allows me more opportunity to absorb your ex
 
 _- The Beach, 2000_
 
-<img src={thebeach2000} />
+### TUK-TUKS
 
-## BAIYOKE SUITE
+<img src={thebeach2000} />
 
 ## ROAD TO NORTH
