--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdx
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdx
@@ -1,6 +1,7 @@
 import Cryptor from '@/components/cryptor';
 import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from './The.Beach.2000.png';
+import sara from '@/assets/sara.jpg';
 
 # TOUR 1 SOLITARY
 ## BANGKOK 1
@@ -34,5 +35,6 @@ _- The Beach, 2000_
 </p>
 
 <img src={thebeach2000} />
+<img src={sara} />
 
 ## ROAD TO NORTH
