--- a/src/pages/docs/t7/T1-1-BANGKOK1.mdx
+++ b/src/pages/docs/t7/T1-1-BANGKOK1.mdx
@@ -35,6 +35,11 @@ _- The Beach, 2000_
 </p>
 
 <img src={thebeach2000} />
+
+## CHIANG MAI
+
+<Cryptor>363aeb</Cryptor>, her name.
+
 <img src={sara} />
 
 ## ROAD TO NORTH
