--- a/src/pages/docs/t7/TOUR ONE.mdx
+++ b/src/pages/docs/t7/TOUR ONE.mdx
@@ -3,7 +3,7 @@ import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from './The.Beach.2000.png';
 import sara from '@/assets/sara.jpg';
 
-# TOUR 1 SOLITARY
+# TOUR ONE SOLITARY
 ## BANGKOK 1
 
 <HotelNights date={'2013-10-8'} nights={4} />
@@ -20,9 +20,7 @@ _I was traveling alone. Being alone allows me more opportunity to absorb your ex
 
 _- The Beach, 2000_
 
-### TUK-TUKS
-
-### COWBOY
+### BAIYOKE
 
 <p>
   <Cryptor>0f3aebde</Cryptor>
@@ -36,10 +34,16 @@ _- The Beach, 2000_
 
 <img src={thebeach2000} />
 
-## CHIANG MAI
+## CHIANG MAI 1
 
 <Cryptor>363aeb</Cryptor>, her name.
 
 <img src={sara} />
 
-## ROAD TO NORTH
+## PHUKET 1
+
+### PATONG
+
+### PHUKET TOWN
+
+## BANGKOK 2
