Update and rename T7-KOHPHANGAN1.mdx to TOUR-FOUR-SOUL.mdx

--- a/src/pages/docs/t7/TOUR-FOUR-SOUL.mdx
+++ b/src/pages/docs/t7/TOUR-FOUR-SOUL.mdx
@@ -1,4 +1,14 @@
-## KOH PAHNAGAN 1
+# TOUR FOUR SOUL
+
+## BANGKOK
+
+## KOH PHANGAN
+
+## KOH TAO
+
+## KRABI
+
+## KOH SIMILAN
 
 I found a camera in the sand. I asked around, it belongs to nobody. I danced and hang camera over my head. Later, a guy found me, it's his camera. I asked him to check photos in the camera. "Yes, they are!", These must be his important memories.
 
