--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -1,6 +1,6 @@
 import Cryptor from '@/components/cryptor';
 import HotelNights from '@/components/hotel-nights';
-import thebeach2000 from './The.Beach.2000.png';
+import thebeach2000 from '@/assets/beach.png';
 import sara from '@/assets/sara.jpg';
 
 # TOUR ONE SOLITARY
