--- a/src/pages/docs/t7/TOUR-FOUR-SOUL.mdx
+++ b/src/pages/docs/t7/TOUR-FOUR-SOUL.mdx
@@ -1,8 +1,12 @@
+import fullmoon1 from '@/assets/fullmoon-1.jpg';
+
 # TOUR FOUR SOUL
 
 ## BANGKOK
 
 ## KOH PHANGAN
+
+<img src={fullmoon1} />
 
 ## KOH TAO
 
