--- a/src/pages/docs/t7/TOUR-SEVEN-MEMORY.mdx
+++ b/src/pages/docs/t7/TOUR-SEVEN-MEMORY.mdx
@@ -1,3 +1,5 @@
+import vickyfish from '@assets/vicky-fish.png'
+
 # TOUR SENVEN MEMORY
 
 ## KK MOUNTAIN
@@ -10,3 +12,8 @@
 
 ## KOH PHANGAN 3
 
+I found a camera in the sand. I asked around, it belongs to nobody. I danced and hang camera over my head. Later, a guy found me, it's his camera. I asked him to check photos in the camera. "Yes, they are!", These must be his important memories.
+
+Next morning, where the music from the beach party is audible, a couple that we should be danced in the party found me. "It's him...a good guy who found a camera..." The guy told her girlfriend. We took photos, and they should uploaded. Unfortunately, I never found it.
+
+<img src={vickyfish} />
