--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -36,6 +36,14 @@ _- The Beach, 2000_
 
 ## SUKHOTHAI 1
 
+*It belongs to a very kind family.*
+*Good place, just behind Tourist Center.*
+*It's minutes riding to sights.*
+*I rent a bike for only 50 baht.*
+*Garden house with breakfast.*
+*The daughter of house owner is really beautiful.*
+*I still remember the golden doggy Latu and the pussy momo.*
+
 ## CHIANG MAI 1
 
 <Cryptor>363aeb</Cryptor>, her name.
