--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -44,6 +44,8 @@ _- The Beach, 2000_
 *The daughter of house owner is really beautiful.*
 *I still remember the golden doggy Latu and the pussy momo.*
 
+- My Review wrote on Agoda
+
 ## CHIANG MAI 1
 
 <Cryptor>363aeb</Cryptor>, her name.
