--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -36,6 +36,8 @@ _- The Beach, 2000_
 
 ## SUKHOTHAI 1
 
+Baan Rim Klong Resort
+
 *It belongs to a very kind family.*
 *Good place, just behind Tourist Center.*
 *It's minutes riding to sights.*
