--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -38,6 +38,8 @@ _- The Beach, 2000_
 
 Baan Rim Klong Resort
 
+<HotelNights date={'2013-10-12'} nights={2} />
+
 *It belongs to a very kind family.*
 *Good place, just behind Tourist Center.*
 *It's minutes riding to sights.*
