--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -2,6 +2,7 @@ import Cryptor from '@/components/cryptor';
 import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from '@/assets/beach.png';
 import sara from '@/assets/sara.jpg';
+import Latu from '@/assets/latu.jpg';
 
 # TOUR ONE SOLITARY
 ## BANGKOK 1
@@ -49,6 +50,10 @@ Baan Rim Klong Resort
 *I still remember the golden doggy Latu and the pussy momo.*
 
 - My Review wrote on Agoda
+
+<img src={Latu} />
+
+photo from @thongmuanthecrispyrolldog
 
 ## CHIANG MAI 1
 
