--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -37,7 +37,7 @@ _- The Beach, 2000_
 
 ## SUKHOTHAI 1
 
-Baan Rim Klong Resort
+### Baan Rim Klong Resort
 
 <HotelNights date={'2013-10-12'} nights={2} />
 
@@ -49,11 +49,11 @@ Baan Rim Klong Resort
 *The daughter of house owner is really beautiful.*
 *I still remember the golden doggy Latu and the pussy momo.*
 
-- My Review wrote on Agoda
+_- My review on agoda.com_
 
 <img src={Latu} />
 
-photo from @thongmuanthecrispyrolldog
+_guest with doggy met Latu, from @thongmuanthecrispyrolldog_
 
 ## CHIANG MAI 1
 
