--- a/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
+++ b/src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx
@@ -1,3 +1,4 @@
+import Map from '@/components/map';
 import Cryptor from '@/components/cryptor';
 import HotelNights from '@/components/hotel-nights';
 import thebeach2000 from '@/assets/beach.png';
@@ -36,6 +37,44 @@ _- The Beach, 2000_
 <img src={thebeach2000} />
 
 ## SUKHOTHAI 1
+
+## Unexpected
+
+The bus reached SUKHOTHAI downtown only, songthaew is the way to old city.
+I asked a discount from a driver, and he said yes.
+He told me don't tell to the foreigner couple, and I said "I don't know" when they ask the price the driver give me.
+The driver don't drive me to the place, he want to drop me off at the gate
+I insist to the tourist information center.
+And I don't remembered did he really give me discount and I believe not.
+Not a pleasure experience from this driver.
+
+There's a square right by the center.
+And a aunt's snack waggon I found.
+I bought some to feed myself.
+"Where is this resort?, I asked the aunt.
+"Just go ahead from this road, then turn right.",
+a man with thai style uniform answered.
+I thought he's a local policeman.
+
+"Thank you." I said.
+Abruptly, "I drive you there" he stopped me.
+I respectfully declined, but he insist.
+That is a unexpected ride from foreigner.
+I got on the truck with a tense atmosphere,
+and I was thinking of what to do if he asked me a high ride price or something on the end of trip.
+
+"Are you a policeman?" I asked.
+"No, I am a teacher." he said.
+Scouts I saw when I arrived.
+It should be what he teach I think.
+
+The truck drive straightly and turn right at the first intersection.
+Not more than 5 minutes, I am there.
+
+What a nice guy, isn't is?
+And he's not the only nice guy I met.
+
+<Map driving={[ '17.030496,99.702936,Tourist Information Center', '17.032004,99.702915,_', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
 
 ### Baan Rim Klong Resort
 
