Update and rename src/pages/docs/t7/TOUR-ONE-SOLITARY.mdx to src/pages/docs/1-tour.mdx

--- a/src/pages/docs/1-tour.mdx
+++ b/src/pages/docs/1-tour.mdx
@@ -5,7 +5,7 @@ import thebeach2000 from '@/assets/beach.png';
 import sara from '@/assets/sara.jpg';
 import Latu from '@/assets/latu.jpg';
 
-# TOUR ONE SOLITARY
+# TOUR 1 SOLITARY
 ## BANGKOK 1
 
 <HotelNights date={'2013-10-8'} nights={4} />
@@ -22,13 +22,11 @@ _I was traveling alone. Being alone allows me more opportunity to absorb your ex
 
 _- The Beach, 2000_
 
-### BAIYOKE
+### PRATUNAM
 
 <p>
   <Cryptor>0f3aebde</Cryptor>
 </p>
-
-### NANA
 
 <p>
   <Cryptor>0f3aebde</Cryptor>
