Update and rename src/pages/docs/1-tour.mdx to src/pages/docs/t7/1-tour.mdx

--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -92,6 +92,15 @@ _- My review on agoda.com_
 
 _guest with doggy met Latu, from @thongmuanthecrispyrolldog_
 
+Night, family play cards in parents‘ house.
+They invite me, and I can't.
+We sit cross-legged on the floor.
+The cat Momo is there too, just besides my leg.
+
+_๑ ๒ ๓ ๔ ๕ ๖ ๗ ๘ ๙ ๑๐_
+
+I learnt thai number there.
+
 ## CHIANG MAI 1
 
 <Cryptor>363aeb</Cryptor>, her name.
