--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -93,13 +93,14 @@ _- My review on agoda.com_
 _guest with doggy met Latu, from @thongmuanthecrispyrolldog_
 
 Night, family play cards in parents‘ house.
-They invite me, and I can't.
+They invite me even I can't play.
 We sit cross-legged on the floor.
-The cat Momo is there too, just besides my leg.
+The cat Momo besides my leg.
 
 _๑ ๒ ๓ ๔ ๕ ๖ ๗ ๘ ๙ ๑๐_
 
-I learnt thai number there.
+They teach me how to count in thai.
+That have a lot of funny.
 
 ## CHIANG MAI 1
 
