--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -38,39 +38,37 @@ _- The Beach, 2000_
 
 ## Unexpected
 
-The bus reached SUKHOTHAI downtown only, songthaew is the way to old city.
-I asked a discount from a driver, and he said yes.
-He told me don't tell to the foreigner couple, and I said "I don't know" when they ask the price the driver give me.
-The driver don't drive me to the place, he want to drop me off at the gate
-I insist to the tourist information center.
-And I don't remembered did he really give me discount and I believe not.
-Not a pleasure experience from this driver.
+Bus stop in downtown, I head to songthaew.
+I asked a discount to ancient city, driver said yes.
+After, he told dropping me off at old town east.
+I insist take off at Tourist Information Center in the north.
+I don't remembered did he really give me discount, and I believe not.
+Unpleasure experience.
 
-There's a square right by the center.
-And a aunt's snack waggon I found.
-I bought some to feed myself.
-"Where is this resort?, I asked the aunt.
+TIC is big square, and I saw no resorts around.
+I asked road to a aunt who own a snack waggon.
+
 "Just go ahead from this road, then turn right.",
 a man with thai style uniform answered.
-I thought he's a local policeman.
 
 "Thank you." I said.
-Abruptly, "I drive you there" he stopped me.
+
+"I drive you there."
+
 I respectfully declined, but he insist.
 That is a unexpected ride from foreigner.
 I got on the truck with a tense atmosphere,
-and I was thinking of what to do if he asked me a high ride price or something on the end of trip.
+and I was thinking of what if asking me a high price at the end.
 
-"Are you a policeman?" I asked.
-"No, I am a teacher." he said.
+"Are you a policeman?"
+
+"No, I am a teacher."
+
 Scouts I saw when I arrived.
 It should be what he teach I think.
 
 The truck drive straightly and turn right at the first intersection.
-Not more than 5 minutes, I am there.
-
-What a nice guy, isn't is?
-And he's not the only nice guy I met.
+Not more than 5 minutes.
 
 <Map driving={[ '17.030496,99.702936,Tourist Information Center', '17.032004,99.702915,_', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
 
