--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -67,8 +67,7 @@ and I was thinking of what if asking me a high price at the end.
 Scouts I saw when I arrived.
 It should be what he teach I think.
 
-The truck drive straightly and turn right at the first intersection.
-Not more than 5 minutes.
+Soon, I arrived.
 
 <Map driving={[ '17.030496,99.702936,Tourist Information Center', '17.032004,99.702915,_', '17.031670,99.706329,Baan Rim Klong Resort', ]} />
 
