--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -99,6 +99,12 @@ _๑ ๒ ๓ ๔ ๕ ๖ ๗ ๘ ๙ ๑๐_
 They teach me how to count in thai.
 That have a lot of funny.
 
+### MORNING
+
+Morning, I'm riding east.
+I found a local path which have banglows along.
+I'm riding in the road and say 'hello' to everyone I saw..
+
 ## CHIANG MAI 1
 
 <Cryptor>363aeb</Cryptor>, her name.
