--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -36,8 +36,6 @@ _- The Beach, 2000_
 
 ## SUKHOTHAI 1
 
-## Unexpected
-
 Bus stop in downtown, I head to songthaew.
 I asked a discount to ancient city, driver said yes.
 After, he told dropping me off at old town east.
@@ -118,3 +116,9 @@ I'm riding in the road and say 'hello' to everyone I saw..
 ### PHUKET TOWN
 
 ## BANGKOK 2
+
+### PRATUNAM
+
+Then,
+I go back to Pratunam.
+I always visit place twice.
