Update and rename TOUR-FOUR-SOUL.mdx to 4-tour.mdx

--- a/src/pages/docs/t7/4-tour.mdx
+++ b/src/pages/docs/t7/4-tour.mdx
@@ -4,13 +4,15 @@ import fullmoon1 from '@/assets/fullmoon-1.jpg';
 
 ## BANGKOK
 
-## KOH PHANGAN
+## KOH TAO
+
+### FULLMOON PARTY
 
 <img src={fullmoon1} />
-
-## KOH TAO
 
 ## KRABI
 
 ## KOH SIMILAN
+
+## BANGKOK
 
