--- a/src/pages/docs/t7/2-tour.mdx
+++ b/src/pages/docs/t7/2-tour.mdx
@@ -1,3 +1,6 @@
+import mabul1 from '@/assets/mabul-1.jpg';
+import mabul2 from '@/assets/mabul-2.jpg';
+
 # TOUR TWO BACKPACKER
 
 ## KULA LUMPUR 1
@@ -5,6 +8,9 @@
 ## KOTA KINABALU 1
 
 ## MABUL 1
+
+<img src={mabul1} />
+<img src={mabul2} />
 
 ## KOTA KINABALU 2
 
