--- a/src/pages/docs/t7/1-tour.mdx
+++ b/src/pages/docs/t7/1-tour.mdx
@@ -41,10 +41,9 @@ I asked a discount to ancient city, driver said yes.
 After, he told dropping me off at old town east.
 I insist take off at Tourist Information Center in the north.
 I don't remembered did he really give me discount, and I believe not.
-Unpleasure experience.
 
-TIC is big square, and I saw no resorts around.
-I asked road to a aunt who own a snack waggon.
+I saw no resorts around.
+I went to a snack waggon for asking road.
 
 "Just go ahead from this road, then turn right.",
 a man with thai style uniform answered.
@@ -54,11 +53,9 @@ a man with thai style uniform answered.
 "I drive you there."
 
 I respectfully declined, but he insist.
-That is a unexpected ride from foreigner.
-I got on the truck with a tense atmosphere,
-and I was thinking of what if asking me a high price at the end.
+I was thinking of what if he ask me a high price.
 
-"Are you a policeman?"
+"Are you a policeman?" I questioned on the car.
 
 "No, I am a teacher."
 
