--- a/src/pages/docs/t7/7-tour.mdx
+++ b/src/pages/docs/t7/7-tour.mdx
@@ -12,6 +12,8 @@ import vickyfish from '@/assets/vicky-fish.png';
 
 ## FULLMOON PARTY 3
 
+green dreadlocks on party
+
 I found a camera in the sand. I asked around, it belongs to nobody. I danced and hang camera over my head. Later, a guy found me, it's his camera. I asked him to check photos in the camera. "Yes, they are!", These must be his important memories.
 
 Middle night, where the music from the beach party is audible, a couple that we should be danced in the party found me. "It's him...a good guy who found a camera..." The guy told her girlfriend. We took photos, and they should uploaded. Unfortunately, I never found it.
@@ -20,6 +22,11 @@ After that I took speed boat back to KOH SAMUI.
 
 The boat company sucks, make us waiting for a long time.
 
+green dreadlocks on pier
+
+green dreadlocks on Songkran
+
+green dreadlocks in dark
 
 <img src={vickyfish} />
 
