--- a/src/pages/docs/t7/0-preface.mdx
+++ b/src/pages/docs/t7/0-preface.mdx
@@ -2,6 +2,6 @@ import HotelNights from '@/components/hotel-nights';
 
 # Preface
 
-## 鱼欢 and 沙硕
+## Fishes playing and pebble
 
 <HotelNights date={'2013-6-5'} nights={1} />
