--- a/src/pages/docs/movie/lines.mdx
+++ b/src/pages/docs/movie/lines.mdx
@@ -23,3 +23,14 @@ So we'll hunt him...Because he can take it.
 Because he's not our hero.
 He's a silent guardian...a watchful protector.
 A DARK KNIGHT.
+
+
+Some people are born to sit by a river,
+some get struck by lightning,
+some have an ear for music,
+some are artists,
+some swim,
+some know buttons,
+some know Shakespeare,
+some are mothers,
+and some people dance.
