--- a/src/pages/docs/t7/0-preface.mdx
+++ b/src/pages/docs/t7/0-preface.mdx
@@ -1,7 +1,11 @@
 import HotelNights from '@/components/hotel-nights';
+import Cryptor from '@/components/cryptor';
 
-# Preface
+# PREFACE
 
-## Fishes playing and pebble
+## FISHES & PEBBLES
 
 <HotelNights date={'2013-6-5'} nights={1} />
+
+I pressed my ear against the door and listened attentively to the next room.
+I <Cryptor>1130fddab2b81aad0407</Cryptor>.
