--- a/src/pages/docs/t7/0-preface.mdx
+++ b/src/pages/docs/t7/0-preface.mdx
@@ -9,3 +9,14 @@ import Cryptor from '@/components/cryptor';
 
 I pressed my ear against the door and listened attentively to the next room.
 I <Cryptor>1130fddab2b81aad0407</Cryptor>.
+
+I look back on the way I was then..
+a young... stupid boy who didn't take a leap of faith.
+I wanna talk to him. I wanna to try and talk some story to him.
+Tell him the things will be.
+But I can't. That boy's long gone... and this old soul is all that's left.
+I got to live with that.
+
+Regret?
+
+It's just a bullshit word.
