--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -6,6 +6,11 @@
 
 ## KOH SIMILAN 2
 
+Manta Queen 1 - Khao Lak - Phuket bus terminal 2 - By minibus of Scuba Adventures 
+Bus terminal - Krabi - By night bus to Hat Yai, arrive at 1AM.
+One hour walk to hotel, of course, 3 hours sleep.
+Lomprayah's bus terminal - Donsak Pier - Koh Phangan - Thong Sala Pier - Rin Nai Beach - 541km, 18 hrs, what do you want?
+
 ## KOH PHANGAN 2
 
 ## BANGKOK
