--- a/src/pages/docs/t7/6-tour.mdx
+++ b/src/pages/docs/t7/6-tour.mdx
@@ -1,3 +1,5 @@
+import Map from '@/components/map';
+
 ## TOUR SIX SEXY
 
 ## BANGKOK
@@ -9,6 +11,8 @@
 Manta Queen 1 - Khao Lak - Phuket bus terminal 2 - By minibus of Scuba Adventures.
 Bus terminal - Krabi - By night bus to Hat Yai, arrive hotel at 3 a.m.
 7 a.m, Lomprayah's bus terminal - Donsak Pier - Koh Phangan - Thong Sala Pier - Rin Nai Beach - 541km, 18 hrs, of course short sleep, what do you want?
+
+<Map driving={[ '8.644791,98.251189,Khao Lak Scuba Adventures', '7.917718,98.395462,Phuket Bus Terminal 2', '8.102171,98.907734,Krabi', '8.077127,98.904208,Lomprayah', '9.318253,99.736982,Donsak', '9.709127,99.984432,Thong Sala', '9.671759,100.067371,Rin Nai', ]} />
 
 ## KOH PHANGAN 2
 
